# shareables

./: .gitignore  AGENTS.md  LICENSE  README.md  ai-tool-endpoint-config.md
better-agent-gateway/: .gitignore  Makefile  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt  template.env
better-agent-gateway/bundle/resources/: app.yml
better-agent-gateway/docs/: client-configuration.md  programmatic-auth-research.md  research-cursor-config-validation.md  research-cursor-oauth-auth-strategy.md  research-cursor-ssrf-block.md
better-agent-gateway/frontend/: package-lock.json  package.json
better-agent-gateway/frontend/src/: App.css  App.tsx  index.css
better-agent-gateway/scripts/: headless_auth_test.py  validate.py
better-agent-gateway/server/: alias_registry.py  audit.py  auth.py  policy.py  proxy.py  routes.py
better-agent-gateway/server/routes/: __init__.py  auth.py  chat.py  cursor_config.py  health.py  logs.py  messages.py  models.py  permissions.py  version.py
better-agent-gateway/tests/: conftest.py  test_alias_registry.py  test_api_contract.py  test_chat_endpoint.py  test_cursor_config.py  test_integration.py  test_messages_endpoint.py  test_models_endpoint.py  test_openai_compat.py  test_permissions.py  test_request_logs.py
databricks/apps/databricks-agent-proxy/: pyproject.toml  template.env
databricks/apps/github-actions-runner-spike/: Makefile  README.md  app.py  app.yaml  databricks.yml  pyproject.toml
databricks/demos/langgraph_genie_agent/: .gitignore  README.md  agent.py  pyproject.toml
databricks/demos/simple_dispatcher_agent/: .env.template  .gitignore  README.md  agent.py  databricks.yml  driver.py  pyproject.toml  register_web_search.py  serving_agent.py
databricks/hive_table_experiments/: .env.template  README.md  databricks.yml  pyproject.toml
databricks/hive_table_experiments/notebooks/: uc_absolute_path_test.ipynb
databricks/hive_table_experiments/scripts/: setup_fresh_hive_tables.py
databricks/hive_table_experiments/terraform/: .gitignore  lakeformation.tf  outputs.tf  serverless_instance_profile.tf  terraform.tfvars.example
databricks/hive_table_experiments/tests/: __init__.py  conftest.py  test_absolute_path_hypothesis.py  test_delta_conversion.py  test_manual_delta_absolute.py  test_manual_delta_operations.py  test_partitions_across_aws_regions.py  test_partitions_across_s3_buckets.py  test_partitions_in_nested_subdirectories.py  test_partitions_outside_table_root.py  test_partitions_shared_between_tables.py  test_partitions_under_table_root.py  test_uc_registration.py  test_write_operations.py  validate_absolute_paths.py
databricks/hive_to_delta/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTS_SUMMARY.md  Makefile  QUICKSTART.md  README.md  TESTING.md  TEST_COVERAGE.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  pyproject.toml  run_tests.sh
databricks/hive_to_delta/hive_to_delta/: __init__.py  converter.py  delta_log.py  discovery.py  glue.py  listing.py  models.py  parallel.py  s3.py  schema.py  vacuum.py
databricks/hive_to_delta/scripts/: README.md  setup_integration_test_tables.py  verify_test_tables.py
databricks/hive_to_delta/terraform/: iam.tf  outputs.tf  terraform.tfvars.example  variables.tf
databricks/hive_to_delta/tests/: __init__.py  conftest.py  test_composition.py  test_convert.py  test_converter.py  test_delta_log.py  test_discovery.py  test_infrastructure.py  test_integration.py  test_listing.py  test_models.py  test_operations.py  test_schema.py  test_shallow_clone.py  test_vacuum.py
databricks/libraries/databricks_gsheets_reader/: .env.template  Sync_GSheets_to_Views.ipynb  pyproject.toml
databricks/randy_apps_starter/: Makefile  README.md  app.py  app.yaml  databricks.yml  db.py  dev_resource_name.py  pyproject.toml  requirements.txt
databricks/randy_apps_starter/static/: terminal.html
databricks/randy_apps_starter/tests/: conftest.py  test_app.py  test_db.py  test_dev_resource_name.py
dbt/: README.md  dbt_project.yml  packages.yml  pyproject.toml
dbt/databricks_dashboards/: Account Usage Dashboard.lvdash.json  Databricks Audit Log.lvdash.json  Databricks Usage Alerts.json  Databricks Usage Alerts.lvdash.json  Model Serving Cost Explorer.lvdash.json
dbt/models/marts/: mart_account_usage_analyze_tags.sql  mart_account_usage_analyze_tags_match.sql  mart_account_usage_analyze_tags_overtime.sql  mart_account_usage_analyze_top_spending.sql  mart_account_usage_analyze_top_spending_overtime.sql  mart_account_usage_overview.sql  mart_account_usage_overview_overtime.sql  mart_account_usage_schema.yml  mart_account_usage_total.sql  mart_audit_log_schema.yml  mart_databricks_audit_log_events.sql  mart_databricks_audit_log_freshness.sql  mart_foundation_model_serving_usage.sql  mart_model_serving_explorer_schema.yml  mart_served_entities.sql
dbt/models/modeled/: dim_latest_list_prices.sql  dim_latest_model_serving_endpoints.sql  fct_model_serving_usage.sql  fct_usage_with_workspace_and_pricing.sql  schema.yml
dbt/models/staging/: stg_system_access_audit.sql  stg_system_billing_list_prices.sql  stg_system_billing_usage.sql  stg_system_serving_served_entities.sql  system_sources.yml
dbt/seeds/: databricks_workspace_map.csv  seeds.yml
experiments/duckdb-unity-catalog/: .env.template  README.md  pyproject.toml
experiments/duckdb-unity-catalog/research/: delta-uc-rest-findings.md  iceberg-rest-findings.md  uc-catalog-hostname-bug.md
experiments/duckdb-unity-catalog/scripts/: 00_setup_tables.py  01_iceberg_rest.py  02_delta_uc_rest.py  _common.py  iceberg_rest_eval.py
experiments/duckdb-unity-catalog/tests/: test_iceberg_rest.py  test_uc_rest.py
uc-metadata/: pyproject.toml
uc-metadata/frontend/: package-lock.json  package.json  vite.config.ts
uc-metadata/frontend/src/: App.tsx  index.css
uc-metadata/scripts/: dab-lakebase-pg-env.sh  dab-lakebase-validate.sh  git-branch-slug.sh
uc-metadata/server/: auth.py  db.py  infra_branch.py  models.py
uc-metadata/server/routes/: __init__.py  health.py  metadata.py  proposals.py
(+340 files in other folders)
