[project]
name = "better-agent-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.55.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "click>=8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the live deployed app (require credentials in .env)",
]
