[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hive-to-delta"
version = "0.1.0"
description = "Bulk registration of AWS Glue Hive tables as external Delta tables in Unity Catalog"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-connect>=15.1.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.20.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "standard: Standard partition layout tests",
    "cross_bucket: Cross-bucket partition tests",
    "cross_region: Cross-region partition tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]
