[project]
name = "randy-databricks-apps-starter"
version = "0.1.0"
description = "Randy starter template for Databricks Apps iteration sandbox."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
