[project]
name = "duckdb-unity-catalog"
version = "0.1.0"
description = "Experiment: DuckDB interaction with Databricks Unity Catalog across Delta and Iceberg tables"
requires-python = ">=3.11,<3.12"
dependencies = [
    "databricks-sdk",
    "databricks-connect",
    "duckdb>=1.4.0",
    "requests",
]
