[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-agent-proxy"
version = "0.1.0"
description = "Localhost OAuth proxy for connecting Cursor IDE to Databricks Apps gateways"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "databricks-sdk>=0.55.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    "click>=8.0",
]

[project.scripts]
databricks-agent-proxy = "databricks_agent_proxy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_agent_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
