[project]
name = "langgraph-genie-agent"
version = "0.1.0"
description = "LangGraph ReAct agent that answers questions by calling a Databricks Genie space as a tool"
requires-python = ">=3.10"
dependencies = [
    "databricks-langchain>=0.19.0",
    "langgraph>=0.2.0",
    "mlflow>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
